# kaname

./: .editorconfig  .gitignore  Makefile  NOTICE  README.md  rust-toolchain.toml
.github/: copilot-instructions.md
.github/agents/: github-project-tracking.agent.md
.github/prompts/: github-project-tracking.prompt.md
.github/scripts/: select-ios-simulator.sh
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
core/: Cargo.toml
core/crates/kaname-core/: Cargo.toml  uniffi.toml
core/crates/kaname-core/src/: coverage.rs  dedup.rs  ffi.rs  lib.rs  model.rs  transfer.rs
core/crates/kaname-core/src/statement/: au_bank.rs  balance_chain.rs  base.rs  common.rs  federal.rs  federal_bank.rs  hdfc.rs  hdfc_bank.rs  icici.rs  icici_bank.rs  iob.rs  ledger_reader.rs  line_reader.rs  mod.rs  polarity.rs  reconcile.rs  sbi.rs  yes.rs
core/crates/kaname-core/tests/: parity.rs
core/scripts/: build-xcframework.sh  privacy-egress-audit.sh
docs/: HANDOFF.md  SESSION-HANDOFF.md  kaname-ios-plan.md
fixtures/: README.md
fixtures/coverage/: basic.json
fixtures/transfer/: basic.json
ios/: .swift-format  .swiftlint.yml  Project.swift
ios/Sources/: KanameApp.swift  RootView.swift
ios/Tests/: AUBankParseTests.swift  CoverageTests.swift  CrossSourceDedupTests.swift  FederalBankParseTests.swift  FederalParseTests.swift  HDFCBankParseTests.swift  HDFCParseTests.swift  ICICIBankParseTests.swift  ICICIParseTests.swift  IOBParseTests.swift  KanameTests.swift  ReconcileTests.swift  SBIParseTests.swift  TransferDetectionTests.swift  YesParseTests.swift
specs/001-rust-swift-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-icici-cc-parser/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-hdfc-cc-parser/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-sbi-cc-parser/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-yes-cc-parser/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-federal-cc-parser/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-bank-account-ledger-reader/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-hdfc-bank-ledger-reader/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-federal-bank-ledger-reader/: plan.md  (+5 more)
(+99 files in other folders)
