[package]
name = "kaname-core"
version = "0.1.0"
description = "Shared, platform-agnostic finance engine for Kaname (parse, categorize, dedup, reconcile). Runs fully on-device."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "kaname_core"
# staticlib + cdylib make the crate FFI-ready for the iOS XCFramework (UniFFI wired in P1);
# lib keeps it usable as a normal Rust dependency and testable with `cargo test`.
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
rust_decimal.workspace = true
serde.workspace = true
chrono.workspace = true
regex.workspace = true
csv.workspace = true
uniffi.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true

# `cli` pulls in UniFFI's bindgen CLI (clap). It is enabled only to build the
# `uniffi-bindgen` helper binary; the shipped static/cdylib slices use default
# features so the app binary never links clap.
[features]
cli = ["uniffi/cli"]

# Pins the bindings generator to the exact `uniffi` dependency version so
# `make core-xcframework` produces reproducible Swift bindings.
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]
